Remove unnecessary jvm args